forgettable-frontend/src/components/SearchBar/SearchBar.module.css
@import "../../colours.css";

.SearchContainer {
    width: 100%;
    display: flex;
    flex-direction: column;
}

.SearchInputs{
    display: flex;
    border: 1px solid var(--bord);
    border-radius: 8px 8px 8px 8px;
}

.SearchNameInput{
    background-color: var(--lbkgd);
    border: 0;
    border-radius: 8px 0px 0px 8px;
    font-size: var(--text-normal);
    padding: 15px;
    padding-left: 20px;
    width: 100%;
    font-family: 'Poppins', sans-serif;
}

.SearchNameInput:focus{
    outline: none;
}

.SearchIcon {
    height: 60px;
    width: 60px;
    border-radius: 0px 8px 8px 0px;
    padding-right: 3px;
    background-color: var(--lbkgd);
    display: grid;
    place-items: center;
}

.SearchIcon svg {
    font-size: var(--text-xxlarge);
}

.ClearBtn{
    cursor: pointer;
}

.DataResult {
    width: inherit;
    z-index: 100;
    border-radius: 8px;
    max-height: 200px;
    overflow: hidden;
    overflow-y: auto;
    -ms-overflow-style: none;
    scrollbar-width: none;
    border: 1px solid var(--bord);
    background-color: var(--bkgd);
    
}

.DataResult::-webkit-scrollbar{
      display: none;
}

.DataItem {
    width: 100%;
    height: 50px;
    font-size: 20px;
    display: flex;
    position: relative;
    align-items: center;
    color: var(--ltxt1);
    text-decoration: none;
}

.DataItem:hover{
    background-color: var(--card);
}

.DataItemP {
    margin-left: 10px;
}

